// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can be disabled 1`] = `
.pounce-0 {
  min-height: 47px;
  position: relative;
  border: 1px solid;
  -webkit-transition: border-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: border-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  background-color: transparent;
  border-radius: 4px;
  border-color: #3e516b;
}

.pounce-0:hover {
  border-color: #0081c5;
}

.pounce-0:focus-within {
  border-color: #0081c5;
}

.pounce-0:focus-within span {
  opacity: 1;
  visibility: visible;
}

.pounce-0:focus-within label {
  font-weight: 500;
  -webkit-transform: translate(6px, 4px) scale(0.65);
  -moz-transform: translate(6px, 4px) scale(0.65);
  -ms-transform: translate(6px, 4px) scale(0.65);
  transform: translate(6px, 4px) scale(0.65);
}

<div>
  <div
    aria-disabled="true"
    class="pounce-0"
  />
</div>
`;

exports[`can be hidden 1`] = `
.pounce-0 {
  min-height: 47px;
  position: relative;
  border: 1px solid;
  -webkit-transition: border-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: border-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  background-color: transparent;
  border-radius: 4px;
  border-color: #3e516b;
}

.pounce-0:hover {
  border-color: #0081c5;
}

.pounce-0:focus-within {
  border-color: #0081c5;
}

.pounce-0:focus-within span {
  opacity: 1;
  visibility: visible;
}

.pounce-0:focus-within label {
  font-weight: 500;
  -webkit-transform: translate(6px, 4px) scale(0.65);
  -moz-transform: translate(6px, 4px) scale(0.65);
  -ms-transform: translate(6px, 4px) scale(0.65);
  transform: translate(6px, 4px) scale(0.65);
}

<div>
  <div
    aria-hidden="true"
    class="pounce-0"
    hidden=""
  />
</div>
`;

exports[`can be invalid 1`] = `
.pounce-0 {
  min-height: 47px;
  position: relative;
  border: 1px solid;
  -webkit-transition: border-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: border-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  background-color: transparent;
  border-radius: 4px;
  border-color: #d64242;
}





.pounce-0:focus-within span {
  opacity: 1;
  visibility: visible;
}

.pounce-0:focus-within label {
  font-weight: 500;
  -webkit-transform: translate(6px, 4px) scale(0.65);
  -moz-transform: translate(6px, 4px) scale(0.65);
  -ms-transform: translate(6px, 4px) scale(0.65);
  transform: translate(6px, 4px) scale(0.65);
}

<div>
  <div
    class="pounce-0"
  />
</div>
`;

exports[`can be required 1`] = `
.pounce-0 {
  min-height: 47px;
  position: relative;
  border: 1px solid;
  -webkit-transition: border-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: border-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  background-color: transparent;
  border-radius: 4px;
  border-color: #3e516b;
}

.pounce-0:hover {
  border-color: #0081c5;
}

.pounce-0:focus-within {
  border-color: #0081c5;
}

.pounce-0:focus-within span {
  opacity: 1;
  visibility: visible;
}

.pounce-0:focus-within label {
  font-weight: 500;
  -webkit-transform: translate(6px, 4px) scale(0.65);
  -moz-transform: translate(6px, 4px) scale(0.65);
  -ms-transform: translate(6px, 4px) scale(0.65);
  transform: translate(6px, 4px) scale(0.65);
}

<div>
  <div
    class="pounce-0"
  />
</div>
`;

exports[`can be solid 1`] = `
.pounce-0 {
  min-height: 47px;
  position: relative;
  border: 1px solid;
  -webkit-transition: border-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: border-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  background-color: transparent;
  border-radius: 4px;
  border-color: #3e516b;
}

.pounce-0:hover {
  border-color: #0081c5;
}

.pounce-0:focus-within {
  border-color: #0081c5;
}

.pounce-0:focus-within span {
  opacity: 1;
  visibility: visible;
}

.pounce-0:focus-within label {
  font-weight: 500;
  -webkit-transform: translate(6px, 4px) scale(0.65);
  -moz-transform: translate(6px, 4px) scale(0.65);
  -ms-transform: translate(6px, 4px) scale(0.65);
  transform: translate(6px, 4px) scale(0.65);
}

<div>
  <div
    class="pounce-0"
  />
</div>
`;

exports[`renders 1`] = `
.pounce-0 {
  min-height: 47px;
  position: relative;
  border: 1px solid;
  -webkit-transition: border-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: border-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  background-color: transparent;
  border-radius: 4px;
  border-color: #3e516b;
}

.pounce-0:hover {
  border-color: #0081c5;
}

.pounce-0:focus-within {
  border-color: #0081c5;
}

.pounce-0:focus-within span {
  opacity: 1;
  visibility: visible;
}

.pounce-0:focus-within label {
  font-weight: 500;
  -webkit-transform: translate(6px, 4px) scale(0.65);
  -moz-transform: translate(6px, 4px) scale(0.65);
  -ms-transform: translate(6px, 4px) scale(0.65);
  transform: translate(6px, 4px) scale(0.65);
}

<div>
  <div
    class="pounce-0"
  />
</div>
`;
